<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ptu_control</name>
  <version>0.0.0</version>
  <description>Package to control pan tilt unit's motors.</description>
  <maintainer email="miro.voellmy@esa.int">Miro Voellmy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>rover_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
